--- a/To Do Lists/css/index.css
+++ b/To Do Lists/css/index.css
@@ -1,34 +1,192 @@
 /* Utilities */
 *, *::after, *::before {
     box-sizing: border-box;
-    font-family: "Minecraft Font";
-}
-
-body {
     margin: 0;
     padding: 0;
 }
 
+body {
+    font-family: 'Open Sans', sans-serif;
+    height: 100vh;
+    width: 100vw;
+    background: linear-gradient(to bottom, #68EACC 0%, #497BE8 100%);
+}
+
+.line-through {
+    text-decoration: line-through;
+    color: red;
+}
+
+/* Wrapper */
+.wrapper {
+    padding: 25px;
+    margin: 120px auto;
+    max-width: 500px;
+    width: 100%;
+    background: #fff;
+    border-radius: 5px;
+}
+
+/* Header */
+.wrapper header {
+    font-size: 30px;
+    font-weight: 600;
+}
+
 /* New item section */
-.new-item-section {
+.wrapper .new-item-section {
     display: flex;
+    height: 45px;
+    width: 100%;
+    margin: 20px 0;
+}
+
+.wrapper .new-item-section input {
+    width: 85%;
+    height: 100%;
+    border: 1px solid #ccc;
+    font-size: 17px;
+    border-radius: 3px;
+    padding-left: 15px;
+    outline: none;
+}
+
+.wrapper .new-item-section button {
+    width: 60px;
+    height: 100%;
+    border: none;
+    outline: none;
+    background: #8E49E8;
+    color: #fff;
+    font-size: 22px;
+    cursor: pointer;
+    border-radius: 3px;
+    margin-left: 5px;
+}
+
+/* List Section */
+.wrapper .list-section li {
+    list-style: none;
+    height: 45px;
+    line-height: 45px;
+    position: relative;
+    background: #F2F2F2;
+    border-radius: 3px;
+    margin-bottom: 8px;
+    padding: 0 15px;
+    overflow: hidden;
+}
+
+.wrapper .list-section li span {
+    position: absolute;
+    text-align: center;
+    color: white;
+    width: 45px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.wrapper .list-section li span:first-child {
+    right: -45px;
+    border-radius: 3px 0 0 3px ;
+    background: #FFD814;
+}
+
+.wrapper .list-section li span:nth-child(2) {
+    right: -90px;
+    
+    background: #FFA41C;
+}
+
+.wrapper .list-section li span:last-child {
+    right: -135px;
+    border-radius: 0 3px 3px 0;
+    background: #E74C3C;
+}
+
+.wrapper .list-section li:hover span:first-child {
+    right: 90px;
+}
+
+.wrapper .list-section li:hover span:nth-child(2) {
+    right: 45px;
+}
+
+.wrapper .list-section li:hover span:last-child {
+    right: 0px;
+}
+
+/* Footer */
+.wrapper .footer {
+    display: flex;
+    position: relative;
+    width: 100%;
+    margin-top: 25px;
+    font-size: 18px;
     align-items: center;
-    justify-content: center;
 }
 
-.new-item-section__input {
-    margin: 15px 0 15px 15px;
-    padding: 10px;
-    font-size: 25px;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
+
+.wrapper .footer > button {
+    position: absolute;
+    border: none;
+    outline: none;
+    background: #8E49E8;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 3px;
+    padding: 6px 10px;
+    right: 0;
 }
 
-.new-item-section__button {
-    margin: 15px 15px 15px 0;
-    padding: 10px;
-    font-size: 25px;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
-    border-left: none;
+
+/* Update Section */
+.update-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    position: absolute;
+    left: 25px;
+    top: -120px;
+    height: 200px;
+    width: 400px;
+    background: rgba(200, 200, 200, 0.9);
+    border-radius: 8px;
+    text-align: center;
+}
+
+.update-section input {
+    width: 85%;
+    height: 40px;
+    border: 1px solid #ccc;
+    font-size: 17px;
+    border-radius: 3px;
+    padding-left: 15px;
+    outline: none;
+}
+
+.update-section button {
+    width: 40%;
+    height: 40px;
+    border: none;
+    outline: none;
+    background: #8E49E8;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 3px;
+    padding: 6px 10px;
+    right: 0;
+}
+
+.update-section header {
+    margin-top: 10px;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.display-none {
+    display: none;
 }
